# Solis

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE.txt  README.md
Benchmarks/: fib.rb
CLI/: CMakeLists.txt  main.c  terminal.h
Docs/: FirstProgram.md  GettingStarted.md  Solis.md  Values.md
FFITest/: CMakeLists.txt  SolisLib.c  SolisLib.h
Solis/: CMakeLists.txt  core.solis  core.solis.inc  solis.h  solis_chunk.c  solis_chunk.h  solis_common.c  solis_common.h  solis_compiler.c  solis_compiler.h  solis_core.c  solis_core.h  solis_gc.c  solis_gc.h  solis_hashtable.c  solis_hashtable.h  solis_interface.c  solis_interface.h  solis_object.c  solis_object.h  solis_opcode.h  solis_os.c  solis_os.h  solis_scanner.c  solis_scanner.h  solis_value.c  solis_value.h  solis_vm.c  solis_vm.h  terminal.h
Testbed/: CMakeLists.txt  classes.solis  fib.solis  inheritance.solis  lists.solis  loadLib.solis  main.c  numbers.solis  test.sol  test.solis  test2.solis  test3.solis  testing.solis
